  * Fixed platform names.
  * Stopped the message 'GtkWarning: could not open display'.
  * Importing gtk.glade.
  * Fixed directory path on yum rootstraps.
  * Added moblin-devel.repo in netbook-lpia-moblin2-alpha1.
  * Deleted unnecessary command aclocal and m4 directory.
  * Added version file. It's used --version option on CUI and 'Help' -> 'About' on GUI.

 -- Mitsutaka Amano <mamano@miraclelinux.com>  Wed, 11 Mar 2009 09:27:08 +0900

moblin-image-creator (0.48) gaston; urgency=low

  [ Mitsutaka Amano ]
  * Starting new version.

  [ Prajwal Mohan ]
  * Fixing usb script

  [ Mitsutaka Amano ]
  * Hiding PERL_BADLANG persistent messages when package installation.
  * Updated ja.po.

  [ Prajwal Mohan ]
  * Adding update column in targer view
  * Adding mount in install script
  * Should be using bzImage for nand and not vmlinuz
  * Adding command line options to add repos to yum targets
  * Changing Nand cmd line
  * Changing USB script to accomodate booting through KVM/QEMU
  * Fixing bugs with yum group install
  * Changing fsets
  * Fixing usb script

  [ Mitsutaka Amano ]
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=130
  * Following Prajwal's changelog.
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=135 for apt platform. Thanks to Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>.
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=112. Thanks to Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=182. Thanks to Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=189. Thanks to Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>
  * Fixing a bug about http://bugzilla.moblin.org/show_bug.cgi?id=194. Thanks to Juan Jesus Ojeda Croissier <juanje.ojeda@gmail.com>