@@ -175,6 +175,14 @@ hd_use_squashfs = 0
 hd_boot_partition_size = 250
 buildroot_packages=
 
+[platform.netbook-lpia-moblin2-alpha2]
+welcome_message = Welcome to Moblin 2.0 Core Alpha2:
+# What additional packages need to be installed in the buildroot roostrap
+buildroot_extras = squashfs-tools dosfstools syslinux module-init-tools mtools busybox setup
+hd_use_squashfs = 0
+hd_boot_partition_size = 250
+buildroot_packages=
+
 [platform.menlow-lpia-moblin2]
 welcome_message = Welcome to Moblin 2.0:
 # What additional packages need to be installed in the buildroot roostrap
