@@ -72,3 +72,8 @@ target_os = moblin2
 description = Netbook on LPIA architecture using Moblin 2.0 Core Alpha1
 package_manager = yum
 target_os = moblin2
+
+[netbook-lpia-moblin2-alpha2]
+description = Netbook on LPIA architecture using Moblin 2.0 Core Alpha2
+package_manager = yum
+target_os = moblin2
